--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 <img id="detail-image" src=""/>
                 <div>
                 <h2 id="detail-title"></h2>
-                <h3>High Score: <span id="detail-high-score"></span></span></h3>
+                <h3>High Score: 
+                    <span id="detail-high-score"></span>
+                </h3>
                 <form id="high-score-form">
                     <input id="score-input" type="text" />
                     <input type="submit" />
